--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "vitest --no-watch"
+    "test": "vitest --no-watch",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js, jsx,ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "next": "16.1.1",
@@ -23,7 +29,9 @@
     "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "husky": "^9.1.7",
     "jsdom": "^27.4.0",
+    "lint-staged": "^16.2.7",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.17"
