--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -2,7 +2,7 @@ name: Run linter test on Push
 on:
     push:
         branches:
-          - main
+        - master
 jobs: 
     run-linter-and-test:
         runs-on: ubuntu-latest
