added coverage command

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "test": "vitest --no-watch",
+    "coverage": "vitest run --coverage",
     "prepare": "husky"
   },
   "lint-staged": {
