--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -11,6 +11,11 @@ jobs:
 
             - name: Checkout code
               uses: actions/checkout@v4
+            
+            - name: Node Setup
+              uses: actions/setup-node@v4
+              with:
+                node-version: 22.17
 
             - name: Install Dependencies
               run: npm i
