--- a/.github/workflows/run-coverage.yml
+++ b/.github/workflows/run-coverage.yml
@@ -14,6 +14,7 @@ jobs:
               uses: actions/setup-node@v4
               with:
                 node-version: 22.17
+                cache: npm
 
             - name: Install dependencies
               run: npm ci # or npm i (npm ci is better that npm i in CI its strictly follows package-lock.json)
