--- a/.github/workflows/level-2.yml
+++ b/.github/workflows/level-2.yml
@@ -20,7 +20,7 @@ jobs:
         steps:
           - uses: actions/checkout@v4
 
-          - uses: actions/node@v4
+          - uses: actions/setup-node@v4
             with:
               node-version: ${{ matrix.node }}
               cache: npm
